# DMF

./: .gitignore  CMakeLists.txt  Dmf.sln  README.md  azure-pipelines.github.yml  azure-pipelines.yml
.github/workflows/: codeql-analysis.yml
Dmf/: DmfVersion.h  LICENSE.txt
Dmf/Documentation/: DMF Modules Overview.docx  Driver Module Framework.docx  Driver Module Framework.md
Dmf/Framework/: DmfBranchTrack.c  DmfCall.c  DmfContainer.c  DmfCore.c  DmfDefinitions.h  DmfDeviceInit.c  DmfFilter.c  DmfGeneric.c  DmfHelpers.c  DmfIncludeInternal.h  DmfIncludes.h  DmfIncludes_KERNEL_MODE.h  DmfIncludes_USER_MODE.h  DmfInterfaceInternal.c  DmfInternal.c  DmfLiveKernelDump.c  DmfModule.h  DmfModuleCollection.c  DmfPortable.c  DmfTrace.h  DmfUtility.c  DmfValidate.c
Dmf/Modules.Library/: DMF_String.c  DMF_String.h  DMF_String.md  DMF_UefiLogs.c  DMF_UefiLogs.h  DMF_UefiLogs.md  DMF_UefiOperation.c  DMF_UefiOperation.h  DMF_UefiOperation.md  DmfModules.Library.Public.h  DmfModules.Library.Trace.h  DmfModules.Library.h  Dmf_AcpiNotification.c  Dmf_AcpiNotification.h  Dmf_AcpiNotification.md  Dmf_AcpiNotification.txt  Dmf_AcpiPepDevice.c  Dmf_AcpiPepDevice.h  Dmf_AcpiPepDevice.md  Dmf_AcpiPepDeviceFan.c  Dmf_AcpiPepDeviceFan.h  Dmf_AcpiPepDeviceFan.md  Dmf_AcpiTarget.c  Dmf_AcpiTarget.h  Dmf_AcpiTarget.md  Dmf_AcpiTarget.txt  Dmf_ActivitySensor.cpp  Dmf_ActivitySensor.h  Dmf_ActivitySensor.md  Dmf_AlertableSleep.c  Dmf_AlertableSleep.h  Dmf_AlertableSleep.md  Dmf_AlertableSleep.txt  Dmf_BufferPool.c  Dmf_BufferPool.h  Dmf_BufferPool.md  Dmf_BufferQueue.c  Dmf_BufferQueue.h  Dmf_BufferQueue.md  Dmf_CmApi.c  (+209 more)
Dmf/Modules.Library.Tests/: DmfModules.Library.Tests.Public.h  DmfModules.Library.Tests.Trace.h  DmfModules.Library.Tests.h  Dmf_Tests_AlertableSleep.c  Dmf_Tests_AlertableSleep.h  Dmf_Tests_BufferPool.c  Dmf_Tests_BufferPool.h  Dmf_Tests_BufferQueue.c  Dmf_Tests_BufferQueue.h  Dmf_Tests_DefaultTarget.c  Dmf_Tests_DefaultTarget.h  Dmf_Tests_DeviceInterfaceMultipleTarget.c  Dmf_Tests_DeviceInterfaceMultipleTarget.h  Dmf_Tests_DeviceInterfaceTarget.c  Dmf_Tests_DeviceInterfaceTarget.h  Dmf_Tests_HashTable.c  Dmf_Tests_HashTable.h  Dmf_Tests_IoctlHandler.c  Dmf_Tests_IoctlHandler.h  Dmf_Tests_IoctlHandler_Public.h  Dmf_Tests_Pdo.c  Dmf_Tests_Pdo.h  Dmf_Tests_PingPongBuffer.c  Dmf_Tests_PingPongBuffer.h  Dmf_Tests_Registry.c  Dmf_Tests_Registry.h  Dmf_Tests_RingBuffer.c  Dmf_Tests_RingBuffer.h  Dmf_Tests_ScheduledTask.c  Dmf_Tests_ScheduledTask.h  Dmf_Tests_SelfTarget.c  Dmf_Tests_SelfTarget.h  Dmf_Tests_Stack.c  Dmf_Tests_Stack.h  Dmf_Tests_String.c  Dmf_Tests_String.h  TestsUtility.c  TestsUtility.h
Dmf/Modules.Template/: DmfModules.Template.Public.h  DmfModules.Template.Trace.h  DmfModules.Template.h  Dmf_EyeGazeGhost.c  Dmf_EyeGazeGhost.h  Dmf_EyeGazeGhost.md  Dmf_Interface_SampleInterface.c  Dmf_Interface_SampleInterface.h  Dmf_Interface_SampleInterface.md  Dmf_Interface_SampleInterfaceLower.c  Dmf_Interface_SampleInterfaceLower.h  Dmf_Interface_SampleInterfaceUpper.c  Dmf_Interface_SampleInterfaceUpper.h  Dmf_LegacyProtocol.c  Dmf_LegacyProtocol.h  Dmf_LegacyProtocol.md  Dmf_LegacyTransportA.c  Dmf_LegacyTransportA.h  Dmf_LegacyTransportA.md  Dmf_LegacyTransportB.c  Dmf_LegacyTransportB.h  Dmf_LegacyTransportB.md  Dmf_NonPnp.c  Dmf_NonPnp.h  Dmf_NonPnp.md  Dmf_NonPnp_Public.h  Dmf_OsrFx2.c  Dmf_OsrFx2.h  Dmf_OsrFx2.md  Dmf_OsrFx2.txt  Dmf_OsrFx2_Public.h  Dmf_SampleInterfaceLowerProtocol.c  Dmf_SampleInterfaceLowerProtocol.h  Dmf_SampleInterfaceLowerTransport1.c  Dmf_SampleInterfaceLowerTransport1.h  Dmf_SampleInterfaceLowerTransport2.c  Dmf_SampleInterfaceLowerTransport2.h  Dmf_SampleInterfaceProtocol1.c  Dmf_SampleInterfaceProtocol1.h  Dmf_SampleInterfaceProtocol1.md  (+30 more)
Dmf/Solution/DmfK/: DmfK.c  (+3 more)
DmfSamples/: DmfSamples.props  DmfSamples.sln
DmfSamples/BusFilter/: BusFilter.c  BusFilter.h  BusFilter.inx  BusFilter.rc  BusFilter.vcxproj  BusFilter.vcxproj.Filters  Driver.c  README.md  Trace.h
DmfSamples/EyeGazeGhost/: DmfInterface.c  EyeGazeGhost.inx  EyeGazeGhost.vcxproj  EyeGazeGhost.vcxproj.Filters
DmfSamples/EyeGazeIoctl/: CMakeLists.txt  DmfInterface.c  EyeGazeIoctl.inx  EyeGazeIoctl.rc  EyeGazeIoctl.vcxproj  EyeGazeIoctl.vcxproj.filters  README.md  trace.h
DmfSamples/InterfaceSample1/: CMakeLists.txt  DmfInterface.c  InterfaceSample1.inx  InterfaceSample1.rc  InterfaceSample1.vcxproj  InterfaceSample1.vcxproj.Filters  README.md  trace.h
DmfSamples/InterfaceSample2/: CMakeLists.txt  DmfInterface.c  InterfaceSample2.inx  InterfaceSample2.rc  InterfaceSample2.vcxproj  InterfaceSample2.vcxproj.filters  README.md
DmfSamples/LegacyProtocolTransport/: DmfInterface.c  LegacyProtocolTransport.inx  LegacyProtocolTransport.vcxproj  LegacyProtocolTransport.vcxproj.Filters  README.md
DmfSamples/ProtocolTransportV1/: DmfInterface.c  ProtocolTransportV1.vcxproj  README.md
DmfSamples/SwitchBar/: DmfInterface.c  README.md  SwitchBar.inx  SwitchBar.rc  SwitchBar.vcxproj  SwitchBar.vcxproj.Filters  SwitchBar1.inx  trace.h
DmfSamples/SwitchBar2/: DmfInterface.c  README.md  SwitchBar.rc  SwitchBar2.inx  SwitchBar2.vcxproj  SwitchBar2.vcxproj.Filters  trace.h
DmfTest/: DmfTest.sln
cmake/: DetectOS.cmake  FindWDK.cmake  FindWDK.cmake.bak  TestSigning.txt  msvc-configurations.cmake
(+187 files in other folders)
